// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`time-line-flag Renders \`time-line-flag\` with state: critical 1`] = `
<i
  aria-hidden="true"
  class="v-icon material-icons theme--light"
  style="color: rgb(245, 105, 84); caret-color: #f56954;"
>
  assistant_photo
</i>
`;

exports[`time-line-flag Renders \`time-line-flag\` with state: major 1`] = `
<i
  aria-hidden="true"
  class="v-icon material-icons theme--light"
  style="color: rgb(255, 153, 0); caret-color: #ff9900;"
>
  assistant_photo
</i>
`;

exports[`time-line-flag Renders \`time-line-flag\` with state: minor 1`] = `
<i
  aria-hidden="true"
  class="v-icon material-icons theme--light"
  style="color: rgb(252, 220, 0); caret-color: #fcdc00;"
>
  assistant_photo
</i>
`;

exports[`time-line-flag Renders \`time-line-flag\` with state: ok 1`] = `
<i
  aria-hidden="true"
  class="v-icon material-icons theme--light"
  style="color: rgb(0, 166, 90); caret-color: #00a65a;"
>
  assistant_photo
</i>
`;

exports[`time-line-flag Renders \`time-line-flag\` with status: cancelled 1`] = `
<i
  aria-hidden="true"
  class="v-icon material-icons theme--light"
  style="color: rgb(117, 117, 117); caret-color: #757575;"
>
  highlight_off
</i>
`;

exports[`time-line-flag Renders \`time-line-flag\` with status: closed 1`] = `
<i
  aria-hidden="true"
  class="v-icon material-icons theme--light"
  style="color: rgb(47, 171, 99); caret-color: #2fab63;"
>
  check_circle_outline
</i>
`;

exports[`time-line-flag Renders \`time-line-flag\` with status: flapping 1`] = `
<i
  aria-hidden="true"
  class="v-icon material-icons theme--light"
  style="color: rgb(43, 62, 79); caret-color: #2b3E4F;"
>
  swap_vert
</i>
`;

exports[`time-line-flag Renders \`time-line-flag\` with status: noEvents 1`] = `
<i
  aria-hidden="true"
  class="v-icon material-icons theme--light"
  style="color: rgb(255, 82, 82); caret-color: #ff5252;"
>
  sync_problem
</i>
`;

exports[`time-line-flag Renders \`time-line-flag\` with status: ongoing 1`] = `
<i
  aria-hidden="true"
  class="v-icon material-icons theme--light"
  style="color: rgb(249, 168, 37); caret-color: #f9A825;"
>
  warning
</i>
`;

exports[`time-line-flag Renders \`time-line-flag\` with status: stealthy 1`] = `
<i
  aria-hidden="true"
  class="v-icon material-icons theme--light"
  style="color: rgb(117, 117, 117); caret-color: #757575;"
>
  swap_vert
</i>
`;

exports[`time-line-flag Renders \`time-line-flag\` with type: ack 1`] = `
<i
  aria-hidden="true"
  class="v-icon material-icons theme--light"
  style="color: rgb(156, 39, 176); caret-color: #9c27b0;"
>
  playlist_add_check
</i>
`;

exports[`time-line-flag Renders \`time-line-flag\` with type: ackRemove 1`] = `
<i
  aria-hidden="true"
  class="v-icon material-icons theme--light"
  style="color: rgb(156, 39, 176); caret-color: #9c27b0;"
>
  not_interested
</i>
`;

exports[`time-line-flag Renders \`time-line-flag\` with type: assocTicket 1`] = `
<i
  aria-hidden="true"
  class="v-icon material-icons theme--light"
>
  local_play
</i>
`;

exports[`time-line-flag Renders \`time-line-flag\` with type: autoInstructionAlreadyRunning 1`] = `
<i
  aria-hidden="true"
  class="v-icon material-icons theme--light"
>
  assignment
</i>
`;

exports[`time-line-flag Renders \`time-line-flag\` with type: autoInstructionComplete 1`] = `
<i
  aria-hidden="true"
  class="v-icon material-icons theme--light"
>
  assignment
</i>
`;

exports[`time-line-flag Renders \`time-line-flag\` with type: autoInstructionFail 1`] = `
<i
  aria-hidden="true"
  class="v-icon material-icons theme--light"
>
  assignment
</i>
`;

exports[`time-line-flag Renders \`time-line-flag\` with type: autoInstructionStart 1`] = `
<i
  aria-hidden="true"
  class="v-icon material-icons theme--light"
>
  assignment
</i>
`;

exports[`time-line-flag Renders \`time-line-flag\` with type: cancel 1`] = `
<i
  aria-hidden="true"
  class="v-icon material-icons theme--light"
>
  delete
</i>
`;

exports[`time-line-flag Renders \`time-line-flag\` with type: changeState 1`] = `
<i
  aria-hidden="true"
  class="v-icon material-icons theme--light"
>
  thumbs_up_down
</i>
`;

exports[`time-line-flag Renders \`time-line-flag\` with type: check 1`] = `
<i
  aria-hidden="true"
  class="v-icon material-icons theme--light black--text"
>
  clear
</i>
`;

exports[`time-line-flag Renders \`time-line-flag\` with type: comment 1`] = `
<i
  aria-hidden="true"
  class="v-icon material-icons theme--light"
  style="color: rgb(186, 104, 200); caret-color: #ba68c8;"
>
  comment
</i>
`;

exports[`time-line-flag Renders \`time-line-flag\` with type: createManualMetaAlarm 1`] = `
<i
  aria-hidden="true"
  class="v-icon material-icons theme--light"
>
  center_focus_strong
</i>
`;

exports[`time-line-flag Renders \`time-line-flag\` with type: declareTicket 1`] = `
<i
  aria-hidden="true"
  class="v-icon material-icons theme--light"
  style="color: rgb(33, 150, 243); caret-color: #2196f3;"
>
  report_problem
</i>
`;

exports[`time-line-flag Renders \`time-line-flag\` with type: delete 1`] = `
<i
  aria-hidden="true"
  class="v-icon material-icons theme--light"
>
  delete
</i>
`;

exports[`time-line-flag Renders \`time-line-flag\` with type: executeInstruction 1`] = `
<i
  aria-hidden="true"
  class="v-icon material-icons theme--light"
>
  assignment
</i>
`;

exports[`time-line-flag Renders \`time-line-flag\` with type: fastAck 1`] = `
<i
  aria-hidden="true"
  class="v-icon material-icons theme--light"
>
  check
</i>
`;

exports[`time-line-flag Renders \`time-line-flag\` with type: group 1`] = `
<i
  aria-hidden="true"
  class="v-icon material-icons theme--light black--text"
>
  clear
</i>
`;

exports[`time-line-flag Renders \`time-line-flag\` with type: groupRequest 1`] = `
<i
  aria-hidden="true"
  class="v-icon material-icons theme--light"
>
  note_add
</i>
`;

exports[`time-line-flag Renders \`time-line-flag\` with type: instructionAbort 1`] = `
<i
  aria-hidden="true"
  class="v-icon material-icons theme--light"
>
  assignment
</i>
`;

exports[`time-line-flag Renders \`time-line-flag\` with type: instructionComplete 1`] = `
<i
  aria-hidden="true"
  class="v-icon material-icons theme--light"
>
  assignment
</i>
`;

exports[`time-line-flag Renders \`time-line-flag\` with type: instructionFail 1`] = `
<i
  aria-hidden="true"
  class="v-icon material-icons theme--light"
>
  assignment
</i>
`;

exports[`time-line-flag Renders \`time-line-flag\` with type: instructionJobAbort 1`] = `
<i
  aria-hidden="true"
  class="v-icon material-icons theme--light"
>
  assignment
</i>
`;

exports[`time-line-flag Renders \`time-line-flag\` with type: instructionJobComplete 1`] = `
<i
  aria-hidden="true"
  class="v-icon material-icons theme--light"
>
  assignment
</i>
`;

exports[`time-line-flag Renders \`time-line-flag\` with type: instructionJobFail 1`] = `
<i
  aria-hidden="true"
  class="v-icon material-icons theme--light"
>
  assignment
</i>
`;

exports[`time-line-flag Renders \`time-line-flag\` with type: instructionJobStart 1`] = `
<i
  aria-hidden="true"
  class="v-icon material-icons theme--light"
>
  assignment
</i>
`;

exports[`time-line-flag Renders \`time-line-flag\` with type: instructionPause 1`] = `
<i
  aria-hidden="true"
  class="v-icon material-icons theme--light"
>
  assignment
</i>
`;

exports[`time-line-flag Renders \`time-line-flag\` with type: instructionResume 1`] = `
<i
  aria-hidden="true"
  class="v-icon material-icons theme--light"
>
  assignment
</i>
`;

exports[`time-line-flag Renders \`time-line-flag\` with type: instructionStart 1`] = `
<i
  aria-hidden="true"
  class="v-icon material-icons theme--light"
>
  assignment
</i>
`;

exports[`time-line-flag Renders \`time-line-flag\` with type: invalidate 1`] = `
<i
  aria-hidden="true"
  class="v-icon material-icons theme--light"
>
  thumb_down
</i>
`;

exports[`time-line-flag Renders \`time-line-flag\` with type: junitTestCaseUpdate 1`] = `
<i
  aria-hidden="true"
  class="v-icon material-icons theme--light"
>
  keyboard_arrow_up
</i>
`;

exports[`time-line-flag Renders \`time-line-flag\` with type: junitTestSuiteUpdate 1`] = `
<i
  aria-hidden="true"
  class="v-icon material-icons theme--light"
>
  keyboard_arrow_up
</i>
`;

exports[`time-line-flag Renders \`time-line-flag\` with type: metaalarmattach 1`] = `
<i
  aria-hidden="true"
  class="v-icon material-icons theme--light"
  style="color: rgb(109, 76, 65); caret-color: #6d4c41;"
>
  center_focus_weak
</i>
`;

exports[`time-line-flag Renders \`time-line-flag\` with type: pause 1`] = `
<i
  aria-hidden="true"
  class="v-icon material-icons theme--light"
>
  pause
</i>
`;

exports[`time-line-flag Renders \`time-line-flag\` with type: pbehaviorAdd 1`] = `
<i
  aria-hidden="true"
  class="v-icon material-icons theme--light"
>
  pause
</i>
`;

exports[`time-line-flag Renders \`time-line-flag\` with type: pbehaviorList 1`] = `
<i
  aria-hidden="true"
  class="v-icon material-icons theme--light"
>
  list
</i>
`;

exports[`time-line-flag Renders \`time-line-flag\` with type: pbhenter 1`] = `
<i
  aria-hidden="true"
  class="v-icon material-icons theme--light"
  style="color: rgb(24, 255, 255); caret-color: #18ffff;"
>
  pause
</i>
`;

exports[`time-line-flag Renders \`time-line-flag\` with type: pbhleave 1`] = `
<i
  aria-hidden="true"
  class="v-icon material-icons theme--light"
  style="color: rgb(24, 255, 255); caret-color: #18ffff;"
>
  play_arrow
</i>
`;

exports[`time-line-flag Renders \`time-line-flag\` with type: play 1`] = `
<i
  aria-hidden="true"
  class="v-icon material-icons theme--light"
>
  play_arrow
</i>
`;

exports[`time-line-flag Renders \`time-line-flag\` with type: removeAlarmsFromManualMetaAlarm 1`] = `
<i
  aria-hidden="true"
  class="v-icon material-icons theme--light"
>
  link_off
</i>
`;

exports[`time-line-flag Renders \`time-line-flag\` with type: snooze 1`] = `
<i
  aria-hidden="true"
  class="v-icon material-icons theme--light"
  style="color: rgb(233, 30, 99); caret-color: #e91e63;"
>
  alarm
</i>
`;

exports[`time-line-flag Renders \`time-line-flag\` with type: statedec 1`] = `
<i
  aria-hidden="true"
  class="v-icon material-icons theme--light black--text"
>
  clear
</i>
`;

exports[`time-line-flag Renders \`time-line-flag\` with type: stateinc 1`] = `
<i
  aria-hidden="true"
  class="v-icon material-icons theme--light black--text"
>
  clear
</i>
`;

exports[`time-line-flag Renders \`time-line-flag\` with type: statusdec 1`] = `
<i
  aria-hidden="true"
  class="v-icon material-icons theme--light black--text"
>
  clear
</i>
`;

exports[`time-line-flag Renders \`time-line-flag\` with type: statusinc 1`] = `
<i
  aria-hidden="true"
  class="v-icon material-icons theme--light black--text"
>
  clear
</i>
`;

exports[`time-line-flag Renders \`time-line-flag\` with type: uncancel 1`] = `
<i
  aria-hidden="true"
  class="v-icon material-icons theme--light black--text"
>
  clear
</i>
`;

exports[`time-line-flag Renders \`time-line-flag\` with type: unsooze 1`] = `
<i
  aria-hidden="true"
  class="v-icon material-icons theme--light black--text"
>
  clear
</i>
`;

exports[`time-line-flag Renders \`time-line-flag\` with type: validate 1`] = `
<i
  aria-hidden="true"
  class="v-icon material-icons theme--light"
>
  thumb_up
</i>
`;
